- fix mnull reporting different solution on Windows - thanks @aero for CPANTesters report

0.28 2022-04-09
- allow alternative values for complex U in mschur (#12) - thanks @sebastic for report
- use C macro "FORTRAN()" to hide whether need _ on end of symbols
- use [t] Pars instead of malloc for fixed-size workspace

0.27 2022-04-06
- now 64-bit safe
- t, issym, tritosym method for complex now defaults to not conjugate
- various memory-management bugs fixed
- PDL::Complex::tricpy now alias to ctricpy
- provide override xerbla_ to not insta-exit on bad input
  (works with OpenBLAS and reference LAPACK, not ATLAS)
- msolve etc now handle native-complex (#10) - thanks @guillepo for report

0.26 2021-11-14
- Reversible now called TwoWay

0.25 2021-10-02
- separate out {Real,Complex,Trans}/selectfunc.c
- opt in to upcoming PDL multi-C feature

0.24 2021-10-01
- change $PRIV() to $COMP()

0.23 2021-09-25
- fix mdet acting on complex matrices - thanks @wlmb

0.22 2021-09-15
- switch from $PRIV(__x_size) to $SIZE(x)

0.21 2021-08-12
- fix test bug under at least 5.14.1 that had test compare complex numbers

0.20 2021-05-30
- also export mpinv
- fix RedoDimsCode for native-complex
- fix matrix-multiplication overload to work with native-complex

0.19 2021-05-24
- change to PDL 2.047 with native complex i()

0.18 2021-05-03
- stop loading PDL::Complex and overriding PDL:: functions

0.17 2021-04-01
- handle native complex data

0.16 2021-03-23
- fix pp_setversion calls now that preserves string

0.15 2021-03-04
- add [c]gtsv functions

0.14 2019-12-09
- updated build-file perms - thanks @manwar
- support Lapack >= 3.7.0 - thanks Grégory Vanuxem

0.13 2019-11-10
- updated metadata to point to GitHub

0.12  Mon Jun  8 10:42:52 EDT 2015

  * Fix last 'package PDL::Complex'
  * Add 'clean' option to remove *~ files

0.11

  * Hide PDL and PDL::Complex package declarations from
    PAUSE/CPAN indexer

0.10

  * Add -lquadmath to compiler flags for gfortran

0.09
